@@ -51,8 +51,9 @@ v0.71.1		28-Nov-2004
 
 	mbsetup:
 		Added support for XxxxBSD console port.
-		For new systems, there will now be 20 terminal ports created
-		instead of 10.
+		For new systems, there will now be 16 terminal ports created
+		instead of 10, this is the maximum number of safe created ttys.
+		The ttys are now sorted on the comment fields.
 
 	examples:
 		Removed bbs list items from the English menus and txtfiles and
